deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment   # Change to all lowercase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: myapp-container  # Change to all lowercase
          image: nivisha/spring-app:latest
          ports:
            - containerPort: 8082

---
apiVersion: v1
kind: Service
metadata:
  name: myapp-service  # Change to all lowercase
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8082
  selector:
    app: myapp
